<resources>
    <string name="app_name">Exersice3</string>
    <string name="action_settings">Settings</string>
    <string name="add_joke">Add Joke</string>
    <string name="like_image">Like or Dislike image</string>
    <string name="title_activity_edit_joke">EditJoke</string>
    <string name="edit_text">Edit</string>
    <string name="like_button">Like</string>
    <string name="dislike_button">Dislike</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="add_joke_field">Insert joke here</string>
    <string name="add_joke_author">Author</string>
    <string name="add_joke_date">Date</string>
    <string name="add_joke_button">Add Joke</string>
</resources>
