<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ex3.exersice3.AddNewJoke"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/add_joke_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_joke_field"/>

        <EditText
            android:id="@+id/add_author_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_joke_author"/>

        <EditText
            android:id="@+id/add_date_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/add_joke_date"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="Add Joke"
        android:onClick="addJoke"/>

</LinearLayout>
